--- a/courses/017 哈希函数_参数.md
+++ b/courses/017 哈希函数_参数.md
@@ -10,7 +10,8 @@ bytes32 hash2 = keccak256(abi.encodePacked(uint256(1)));
 bytes memory data = hex"1234";
 bytes32 hash3 = keccak256(data);
 string memory text = "hello";
-bytes32 hash4 = keccak256(bytes(text));  // 需要转换为 bytes
+bytes32 hash4 = keccak256(bytes(text)); 
+bytes32 hash5 = keccak256(text); // 与 hash4 等价
 ```
 
 ## 2. **多个参数（需要 `abi.encode` 或 `abi.encodePacked`）**
@@ -105,7 +106,7 @@ function testHashing() public pure {
     // 示例4：字符串
     string memory name = "Alice";
     bytes32 hash5 = keccak256(bytes(name));  // 转换为 bytes
-    bytes32 hash6 = keccak256(abi.encode(name));  // 也可以使用 abi.encode
+    bytes32 hash6 = keccak256(abi.encode(name));  // 通常，不会这样使用，因为结果不同。因为，abi.encode会操作偏移量等数据。
 }
 ```
 
