--- a/courses/015 合约自毁.md
+++ b/courses/015 合约自毁.md
@@ -13,7 +13,7 @@
 #### 坎昆（Cancun）升级之后：
 - 根据提案，"合约创建-自毁"这两个操作处在同一笔交易时才能生效(如果非得使用，建议如此处理)。
 - ```selfdestruct()```使用后，ETH成功转移到指定账户
-- 此时，合约已经销毁，再次调用目标合约的函数进行交互，则会失败(不一定会失败，合约语义的执行，还处于未确定)
+- 此时，合约虽然已经销毁，但其代码与存储状态，仍然存在!
 
 ---------------------------------------------------------------------------------------------------
 
